Highlights section done; fixed spacing

--- a/travelPage/style.css
+++ b/travelPage/style.css
@@ -48,6 +48,14 @@
   background-color: rgb(215, 201, 0);
 }
 
+#highlights h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 40px;
+  color: rgb(59, 65, 64);
+  margin: 24px 0;
+}
+
 #destinations {
   display: flex;
   width: 90%;
@@ -58,6 +66,18 @@
 
 .destination {
   margin: 0 20px;
+  text-transform: uppercase;
+}
+
+.destination p {
+  text-align: center;
+  font-size: 24px;
+  color: rgb(124, 123, 123);
+  margin: 20px 0;
+}
+
+.destination strong {
+  color: rgb(0, 160, 117);
 }
 
 .destination img {
